ipc/ipdl/test/ipdl/ok/SyncSyncManagee.ipdl
include protocol SyncSyncManager;

sync protocol SyncSyncManagee {
    manager SyncSyncManager;
child:
    async __delete__();
};
