ipc/ipdl/test/ipdl/error/manageSelfToplevel.ipdl
//error: top-level protocol `manageSelfToplevel' cannot manage itself

protocol manageSelfToplevel {
    manager manageSelfToplevel;
    manages manageSelfToplevel;

child:
    async manageSelfToplevel();
    async __delete__();
};
